--- a/templates/show_defect.html
+++ b/templates/show_defect.html
@@ -9,11 +9,13 @@ Show_defect
 
 
 
-<div class="container-fluid-mt-5 px-4"style="border:0.5px solid grey; margin-top: 75px; height: 400px;">
+<div class="container-fluid-mt-5 px-4"style="border:0.5px solid grey; margin-top: 75px; height: 60vh;">
 
 
 	<div class="row">
-    <div class="col-md-3"style="border:0.5px solid grey;">
+    <div class="col-md-3" style="border:0.5px solid grey;">
+  <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target="#scrollspy1" data-mdb-offset="0"
+style="position: relative;  height: 55vh; overflow: auto;">
 
      <ul class="list-group">
 <li class="list-group-item">
@@ -27,15 +29,19 @@ Show_defect
       </ul>
 
 {% endfor %}
-
+</div>
 
   </div>
 
 
-    <div class="col">
+    <div class="col" style="border:0.5px solid grey;">
       
   <div class="forms">
         <form method="post"> 
+
+  <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target="#scrollspy2" data-mdb-offset="0"
+style="position: relative;  height: 55vh; overflow: auto;">
+
 <table class="table">
   <thead>
     <tr>
@@ -73,7 +79,7 @@ Show_defect
     
 </table>
 
-
+ </div>
  </form>
 
   </div>
