--- a/templates/base1.html
+++ b/templates/base1.html
@@ -1,102 +1,109 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <!-- Обязательные метатеги -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+<head>
+  <!-- Обязательные метатеги -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}{% endblock %}</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+    integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+
+  <title>{% block title %}{% endblock %}</title>
+</head>
+
+<body>
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
+
+  <!-- Custom styles for this template -->
+  <link href="navbar-top-fixed.css" rel="stylesheet">
+
+
   </head>
+
   <body>
 
-    <style>
+    <nav class="navbar px-4 navbar-expand-md navbar-light fixed-top bg-light"style="border:0.5px solid grey;>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../static/img/logo/logo.svg" alt="" width="40" height="40">
+        </a>
 
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
+        <!-- <a class="navbar-brand" href="#">Адор</a>  -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/show_defect">ДЕФЕКТЫ ПО ВИДАМ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/show_operation">ДЕФЕКТЫ ПО ОПЕРАЦИЯМ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ДЕФЕКТЫ ПО ИЗДЕЛИЯМ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/show">SHOW</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/add">ADD</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">#</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/1">1</a>
+            </li>
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-    
-    <!-- Custom styles for this template -->
-    <link href="navbar-top-fixed.css" rel="stylesheet">  
-
-
-  </head>
-  <body>
-
-<nav class="navbar px-4 navbar-expand-md navbar-light fixed-top bg-light">
- <div class="container-fluid">
-   <a class="navbar-brand" href="#">
-		<img src="../static/img/logo/logo.svg" alt="" width="40" height="40">
-    </a>
-
-<!-- <a class="navbar-brand" href="#">Адор</a>  -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/show_defect">ДЕФЕКТЫ ПО ВИДАМ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/show_operation">ДЕФЕКТЫ ПО ОПЕРАЦИЯМ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ДЕФЕКТЫ ПО ИЗДЕЛИЯМ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/show">SHOW</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/add">ADD</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/defect">DEFECT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/1">1</a>
-        </li>
-      
-      </ul>
-<!--
+          </ul>
+          <!--
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
 
 -->
-    </div>
-  </div>
-</nav>
+        </div>
+      </div>
+    </nav>
 
 
 
 
-{% block body %}{% endblock %}
+    {% block body %}{% endblock %}
 
 
-   <!-- Optional JavaScript -->
+    <!-- Optional JavaScript -->
     <!-- Popper.js first, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
-  	</body>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+      integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+      crossorigin="anonymous"></script>
+  </body>
+
 </html>
-
-
