--- a/templates/show_defect.html
+++ b/templates/show_defect.html
@@ -47,7 +47,7 @@ Show_defect
 
 <style>
   tr {
-    width: 100%;
+   /* width: 100%;
     display: inline-table;
     height:60px;    */            // <-- the rows height 
     }
@@ -58,7 +58,7 @@ Show_defect
     }
     tbody{
       overflow-y: scroll;      
-      height: 500px;            //  <-- Select the height of the body
+      height: 700px;            //  <-- Select the height of the body
       width: 100%;
       position: absolute;
     }  
