--- a/templates/show.html
+++ b/templates/show.html
@@ -35,7 +35,7 @@ Show
       <tbody>
         {% for i in d %}
         <tr>
-          <td>{{ i.aricle }}</td>
+          <td>{{ i.article }}</td>
           <td>{{ i.name }}</td>
           <td>{{ i.defect }}</td>
           <td>{{ i.operation }}</td>
