--- a/templates/create-article.html
+++ b/templates/create-article.html
@@ -20,7 +20,7 @@
 	 <form method="post">
 		<input type="text" name="defect" id="defect" class="form-control" placeholder="Введите название дефекта"><br>
         <input type="text" name="operation" id="operation" class="form-control" placeholder="Введите название операции"><br>
-        <input type="text" name="aricle" id="aricle" class="form-control" placeholder="Введите № изделия"><br>
+        <input type="text" name="article" id="article" class="form-control" placeholder="Введите № изделия"><br>
         <input type="text" name="name" id="name" class="form-control" placeholder="Введите наименование изделия"><br>
 		<textarea name="note1" id="note1" class="form-control" placeholder="Введите пояснение"></textarea><br>
         <textarea name="note2" id="note2" class="form-control" placeholder="Введите дополнительное пояснение"></textarea><br>
