--- a/templates/defect_detail.html
+++ b/templates/defect_detail.html
@@ -32,8 +32,8 @@ Defect
 
 
 
-     <a href="#" class="btn btn-success">Назад</a>
-        <a href="#" class="btn btn-danger">Удалить</a>
+     <a href="/show_defect" class="btn btn-success">Назад</a>
+        <a href="/show_defect/{{ defect_detail.id }}/del" class="btn btn-danger">Удалить</a>
         <a href="#" class="btn btn-success">Редактировать</a>
     </div>
 
