--- a/templates/example_add.html
+++ b/templates/example_add.html
@@ -45,6 +45,12 @@ Add
 
         </div>
     </div>
+
+    <!-- <div class="row" style="background-color: #f1f1f1; border:1px solid red; "> -->
+        <!-- <div class="col" style="border:0.5px solid grey;"> -->
+            <!-- <img src="#"   class="img-fluid" alt=""> -->
+          <!-- </div>    -->
+    <!-- </div> -->
 </div>
 
 </div>
