--- a/templates/example_add.html
+++ b/templates/example_add.html
@@ -30,7 +30,7 @@ Add
 
                     
                         <label>Select image...</label>
-                        <input type="file" class="form-control" name="image" id="image"><!-- oninput="filesize(this);"> -->
+                        <input type="file" class="form-control" name="image" id="image" oninput="filesize(this);"> 
                         <br>
 
 
@@ -63,10 +63,20 @@ Add
 {% block script %}
 <script>
 
-    function filesize(elem) {
+//    function filesize(elem) {
 
-        document.cookie = `filesize=${elem.files[0].size}`;
-    }
+ //       document.cookie = `filesize=${elem.files[0].size}`;
+//		console.log(document.cookie)
+  //  }
 
+</script>
+
+<script>
+function filesize() {
+	let file = document.getElementById("image").files[0].size;
+	console.log('fs=',file);
+	document.cookie = "filesize=file";
+
+}
 </script>
 {% endblock %}
