--- a/templates/example_add.html
+++ b/templates/example_add.html
@@ -26,20 +26,20 @@ Add
                     <input type="text" name="defect" id="defect" class="form-control"
                         placeholder="Выберите номер изделия"><br>
 
-  
-
-                    
-                        <label>Select image...</label>
-                        <input type="file" class="form-control" name="image" id="image" oninput="filesize(this);"> 
-                        <br>
 
 
 
-  
+                    <label>Select image...</label>
+                    <input type="file" class="form-control" name="image" id="image" oninput="filesize(this);">
+                    <br>
+
+
+
+
                     <input type="submit" class="btn btn-primary" value="Отправить">
-                   
+
                 </form>
-     
+
             </div>
 
 
@@ -48,9 +48,9 @@ Add
     </div>
 
     <!-- <div class="row" style="background-color: #f1f1f1; border:1px solid red; "> -->
-        <!-- <div class="col" style="border:0.5px solid grey;"> -->
-            <!-- <img src="#"   class="img-fluid" alt=""> -->
-          <!-- </div>    -->
+    <!-- <div class="col" style="border:0.5px solid grey;"> -->
+    <!-- <img src="#"   class="img-fluid" alt=""> -->
+    <!-- </div>    -->
     <!-- </div> -->
 </div>
 
@@ -64,19 +64,20 @@ Add
 <script>
 
 //    function filesize(elem) {
-
  //       document.cookie = `filesize=${elem.files[0].size}`;
-//		console.log(document.cookie)
-  //  }
+ //       console.log(document.cookie)
+ //   }
 
 </script>
 
 <script>
-function filesize() {
-	let file = document.getElementById("image").files[0].size;
-	console.log('fs=',file);
-	document.cookie = "filesize=file";
+    function filesize() {
+        let file = document.getElementById("image").files[0].size;
+        console.log('fs=', file);
+       
+        let a = 'filesize'+'='+file;
 
-}
+        document.cookie = 'filesize'+'='+file;
+    }
 </script>
 {% endblock %}
