--- a/templates/example_add.html
+++ b/templates/example_add.html
@@ -16,7 +16,7 @@ Add
             <div class="form-group">
                 <h3>Введите данные</h3>
 
-                <form method="post" id="DjonnyLem" enctype="multipart/form-data">
+                <form  method="post" id="DjonnyLem" enctype="multipart/form-data">
                     <input type="hidden" name="indetify" value='form1'>
 
 
@@ -75,7 +75,7 @@ Add
         let file = document.getElementById("image").files[0].size;
         console.log('fs=', file);
        
-        let a = 'filesize'+'='+file;
+        //let a = 'filesize'+'='+file;
 
         document.cookie = 'filesize'+'='+file;
     }
