--- a/templates/add.html
+++ b/templates/add.html
@@ -21,11 +21,12 @@ Add
 
 
                     <label>Выберите наименование дефекта: </label>
-                    <select class="form-control" name="defect_name1" required="required"><br>
+                    <select class="form-control" id="form-select1" name="defect_name1" required="required" onChange="getValue();"><br>
                         <option value="">Выберите значение</option>
                         {% for i in defect %}
                         <option>{{ i.defect_name }}</option>
                         {% endfor %}
+						<option value="add" style="background:green;">Добавить дефект</option>
                     </select><br>
 
                     <label>Выберите наименование операции: </label>
@@ -82,7 +83,7 @@ Add
     <div class="row" style="background-color: #f1f1f1; border:1px solid red; height:100vh">
         <div class="col-md-9">
             <div class="form-group">
-                <h2>Дефекты</h2>
+                <h2 id="2">Введите наименование дефекта</h2>
 
                 <form method="post" id="DjonnyLem">
                     <input type="hidden" name="indetify" value='form2'>
@@ -108,167 +109,100 @@ Add
 
 </div>
 <!------------------------------------------------------------------------------->
-<div class="forms">
-    <form method="post">
-        <input type="hidden" name="indetify" value='form2'>
-        <label>Введите наименование дефекта: </label><input type="text" name="defect_name" id="defect_name"
-            class="form-control" placeholder="Введите наименование дефекта"><br>
+<!------------------------------------------------------------------------------->
+
+<div class="container">
+    <div class="row" style="background-color: #f1f1f1; border:1px solid red; height:100vh">
+        <div class="col-md-9">
+            <div class="form-group">
+                <h2 id="2">Введите операцию</h2>
+
+                <form method="post" id="DjonnyLem">
+                    <input type="hidden" name="indetify" value='form3'>
+                    <label>Введите наименование операции: </label>
+					<input type="text" name="operation_name" id="operation_name" class="form-control"
+                        placeholder="Введите наименование операции"><br>
+
+     
+
+                    <input type="submit" class="btn btn-primary" value="Отправить">
+
+                </form>
 
 
-        <input type="submit" class="btn btn-success" value="Отправить">
 
-    </form>
+
+            </div>
+
+
+
+        </div>
+    </div>
 </div>
 
-<hr>
-<div class="forms" name="operation_name">
-    <form method="post">
-        <input type="hidden" name="indetify" value='form3'>
-        <label>Введите наименование операции: </label><input type="text" name="operation_name" id="operation_name"
-            class="form-control" placeholder="Введите наименование операции"><br>
-
-        <input type="submit" class="btn btn-success" value="Отправить">
-
-    </form>
 </div>
-<hr>
+<!------------------------------------------------------------------------------->
 
-<div class="forms">
-    <form method="post">
-        <label>Введите номер изделия: </label><input type="text" name="article_number" id="article_number"
-            class="form-control" placeholder="Введите номер изделия"><br>
-        <label>Введите наименование изделия: </label><input type="text" name="article_name" id="article_name"
+<div class="container">
+    <div class="row" style="background-color: #f1f1f1; border:1px solid red; height:100vh">
+        <div class="col-md-9">
+            <div class="form-group">
+                <h2 id="2">Введите информацию по изделию</h2>
+
+                <form method="post" id="DjonnyLem">
+                    <input type="hidden" name="indetify" value='form4'>
+                    <label>Введите номер изделия: </label>
+					<input type="text" name="article_number" id="article_number" class="form-control"
+                        placeholder="Введите номер изделия"><br>
+
+       		 <label>Введите наименование изделия: </label>
+			<input type="text" name="article_name" id="article_name"
             class="form-control" placeholder="Введите наименование изделия"><br>
 
 
-        <input type="submit" class="btn btn-success" value="Отправить">
+                    <input type="submit" class="btn btn-primary" value="Отправить">
 
-    </form>
+                </form>
 
 
+
+
+            </div>
+
+
+
+        </div>
+    </div>
 </div>
 
-<!------------------------------------------------------------------------------------------>
-<!------------------------------------------------------------------------------------------>
+</div>
+<!------------------------------------------------------------------------------->
 
 
-<select name="user_profile_color_2" required="required">
-    <option value="">Выберите значение</option>
-    {% for i in defect %}
-    <option>{{ i.defect_name }}</option>
-    {% endfor %}
-    <option value="1">Синий</option>
-    <option value="2">Зеленый</option>
-    <option value="3">Желтый</option>
-    <option value="4">Красный</option>
-    <option value="5">Оранжевый</option>
-    <option value="6">Черный</option>
-    <option value="/1">ADD</option>
-</select>
-<h3><a href="/1">test</a></h3>
-{% block post_detail %}
-<h3>{{ pr }}</h3>
-{% endblock %}
-<h3>test</h3>
-<hr>
-<hr>
-<hr>
-{% for i in defect %}
-<p>{{ i.defect_name }}</p>
-{% endfor %}
-<hr>
-{% for i in operation %}
-<p>{{ i.operation_name }}</p>
-{% endfor %}
-<hr>
-<hr>
-<hr>
-<!--
-{% for i in defect %} 
-<p>{{ i.defect_name }}</p>
-{% endfor %}
--->
-<a href="/1">указатель ссылки</a>
-
-<select onchange="window.location.href=this.options[this.selectedIndex].value">
-    <option value="">Выберите значение</option>
-    {% for i in defect %}
-    <option VALUE="">{{ i.defect_name }}</option>
-    {% endfor %}
-    <option VALUE="/1">Добавить...</option>
-
-</select>
-
-
-
-<select onchange="window.location.href=this.options[this.selectedIndex].value">
-    <option VALUE="http://ru.stackoverflow.com/">Ссылка №1</option>
-    <option VALUE="http://ru.stackoverflow.com/">Ссылка №2</option>
-    <option VALUE="http://ru.stackoverflow.com/">Ссылка №3</option>
-</select>
-
-<select multiple onchange="window.location.href=this.options[this.selectedIndex].value">
-    <option VALUE="http://ru.stackoverflow.com/">Ссылка №1</option>
-    <option VALUE="http://ru.stackoverflow.com/">Ссылка №2</option>
-    <option VALUE="http://ru.stackoverflow.com/">Ссылка №3</option>
-</select>
-
-<select id="channel-select" name="channel" onchange="window.location.href = this.options[this.selectedIndex].value;">
-
-    <option value="all">Name</option>
-
-    <optgroup label="Name">
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-    </optgroup>
-
-    <optgroup label="Name">
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-        <option value="url">Name</option>
-    </optgroup>
-</select>
-
-<select onchange="document.location=this.options[this.selectedIndex].value">
-    <option value="#">Выберите раздел сайта</option>
-    <option value="depart.html">Отделения</option>
-    <option value="techinfo.html">Техническая информация</option>
-    <option value="study.html">Обучение</option>
-</select>
-
-<hr>
-<h1>Пример использования атрибута "form"</h1>
-<form action="/examples/php-scripts/coffee.php" method="post" id="f-coffee">
-    <fieldset>
-        <legend><b>Какой кофе вы любите?</b></legend>
-        <!-- Переключатели находятся внутри формы -->
-        <label><input type="radio" name="coffee" value="without"> просто кофе (без всего)</label>
-        <label><input type="radio" name="coffee" value="milk"> с молоком</label>
-        <p><input type="text" name="coffee_value" placeholder="Свой вариант"></p>
-    </fieldset>
-</form>
-<!-- Кнопки присоединяются к форме -->
-<p><input type="reset" form="f-coffee"> <input type="submit" form="f-coffee"></p>
-
-
-
-
-{% endblock %}
-
-
-{% block script %}
 <script>
+        function getValue() {
+			let next = "#2"
+            let a = document.getElementById("form-select1");
+            //let b = a.value;
+            /*   if (a.selectedIndex != -1) {
+                   //Если есть выбранный элемент, отобразить его значение (свойство value)
+                   console.log(a.options[a.selectedIndex].text);
+               }*/
 
-    function filesize(elem) {
+            if (a.options[a.selectedIndex].value == "add") {
+                document.location.href = "#2"//"#top"
+            }
+        }
 
-        document.cookie = `filesize=${elem.files[0].size}`;
+</script>
+<script>
+    function filesize() {
+        let file = document.getElementById("image").files[0].size;
+        console.log('fs=', file);
+       
+        //let a = 'filesize'+'='+file;
+
+        document.cookie = 'filesize'+'='+file;
     }
-
 </script>
 {% endblock %}
